--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node ./src/main.js",
-		"dev": "nodemon ./src/main.js"
+		"dev": "nodemon ./src/main.js",
+		"test": "nodemon ./test/index.js"
 	},
 	"keywords": [],
 	"author": "Ilya Sukhan",
@@ -16,6 +17,8 @@
 		"esm": "^3.2.25",
 		"nodemon": "^3.0.3",
 		"openai": "^4.28.0",
+		"pg": "^8.11.3",
+		"sequelize": "^6.37.1",
 		"telegraf": "^4.15.3"
 	}
 }
